--- a/REACT-PROJECT/tt-proyect/src/styles/RegisterGoal.css
+++ b/REACT-PROJECT/tt-proyect/src/styles/RegisterGoal.css
@@ -67,3 +67,88 @@ small.form-text {
   color: #95a5a6;
   margin-bottom: 0.5rem;
 }
+
+.tipo-meta-selector {
+  margin-bottom: 1.5rem;
+}
+
+.tipo-meta-selector label {
+  display: block;
+  font-size: 1rem;
+  color: #34495e;
+  margin-bottom: 0.5rem;
+}
+
+.tipo-meta-selector select {
+  width: 100%;
+  padding: 0.8rem;
+  border-radius: 6px;
+  border: 1px solid #d1d5db;
+  box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.tipo-meta-selector select:focus {
+  border-color: #3498db;
+  outline: none;
+}
+
+.form-check {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.form-check label {
+  margin-right: 10px;
+  font-size: 1rem;
+  font-weight: bold;
+  color: #34495e;
+}
+
+.form-check input[type="checkbox"] {
+  transform: scale(1.2); /* Aumenta el tamaño del checkbox */
+  margin: 0;
+}
+.form-group {
+  margin-bottom: 1rem;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 0.5rem;
+  font-size: 1rem;
+  font-weight: bold;
+  color: #34495e;
+}
+
+.form-control {
+  width: 100%;
+  padding: 0.8rem;
+  border-radius: 6px;
+  border: 1px solid #d1d5db;
+  box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.form-control-checkbox {
+  margin-left: 10px;
+  transform: scale(1.2);
+}
+/* Estilo para la etiqueta del selector principal */
+.tipo-meta-label {
+  display: block;
+  font-size: 1rem;
+  font-weight: bold;
+  color: #34495e;
+  margin-bottom: 0.5rem;
+}
+
+/* Estilo para las etiquetas de los formularios */
+.form-label {
+  display: block;
+  margin-bottom: 0.5rem;
+  font-size: 1rem;
+  font-weight: normal; /* Sin negritas */
+  color: #34495e;
+}
+
+
