cambios de dueda abono

--- a/REACT-PROJECT/tt-proyect/src/styles/DetalleMeta.css
+++ b/REACT-PROJECT/tt-proyect/src/styles/DetalleMeta.css
@@ -212,3 +212,13 @@ button:hover {
   font-weight: bold;
   color: green;
 }
+.abonar-container {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.abonar-button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
